# OpenGL-Game

./: .gitignore  CMakeLists.txt  main.cpp
Game/: CMakeLists.txt  Game.cpp  Game.h
Game/Camera/: CMakeLists.txt  Camera.cpp  Camera.h
Game/Entity/: CMakeLists.txt  Entity.cpp  Entity.h  Player.cpp  Player.h
Game/Render/: CMakeLists.txt  Renderer.cpp  Renderer.h
